Fixed letter spacing on app, and some other styling

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -378,7 +378,7 @@ button {
     h3 {
         font-size: 2.3rem;
         margin: 1rem 0 0 0;
-        letter-spacing: 1.5px;
+        letter-spacing: 1.2px;
     }
 
     .startbtn {
